force-app/main/default/objects/Opportunity/fields/Payroll_Current_Prior_Method__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Current_Prior_Method__c</fullName>
    <label>Payroll Current-Prior Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>AccessPoint</fullName>
            </value>
            <value>
                <fullName>Adam&apos;s Keegan</fullName>
            </value>
            <value>
                <fullName>Administaff</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>ADP Pay eXpert</fullName>
            </value>
            <value>
                <fullName>ADP Payforce</fullName>
            </value>
            <value>
                <fullName>ADP PC/Payroll for Windows</fullName>
            </value>
            <value>
                <fullName>ADP Run</fullName>
            </value>
            <value>
                <fullName>ADP Total Source</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Advantage HR</fullName>
            </value>
            <value>
                <fullName>Advantage Payroll</fullName>
            </value>
            <value>
                <fullName>AEG (American Employer Group)</fullName>
            </value>
            <value>
                <fullName>Agile HR</fullName>
            </value>
            <value>
                <fullName>Allstaff</fullName>
            </value>
            <value>
                <fullName>Alpha Staff</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Amstaff</fullName>
            </value>
            <value>
                <fullName>Asure Software</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>BenefitMall</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Certipay</fullName>
            </value>
            <value>
                <fullName>Co-Advantage</fullName>
            </value>
            <value>
                <fullName>Complete Payroll</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Connect Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>