force-app/main/default/objects/Opportunity/fields/Payroll_Platform__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Platform__c</fullName>
    <description>The Payroll platform for the products of this opportunity (PAY - Core Advanced/PNG, MMS)</description>
    <inlineHelpText>The Payroll platform for the products of this opportunity (PAY - Core Advanced/PNG, MMS)</inlineHelpText>
    <label>Payroll Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>FLEX</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>HROI</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
            </value>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Prism PEO</fullName>
            </value>
            <value>
                <fullName>SurePayroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>