force-app/main/default/objects/Opportunity/fields/Payroll_Unit__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DSA checks this for all opportunities that count as a unit</description>
    <label>Payroll Unit</label>
    <type>Checkbox</type>
</CustomField>