force-app/main/default/objects/Opportunity/fields/Payroll_Units__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Units__c</fullName>
    <label>Payroll Units</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>