force-app/main/default/objects/Opportunity/fields/Pending_Run_of_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Pending_Run_of_Payroll__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pending Run of Payroll</label>
    <type>Date</type>
</CustomField>