force-app/main/default/objects/Opportunity/fields/PEO_Integrated_Quote__c.field-meta.xml
<CustomField>
    <fullName>PEO_Integrated_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEO Integrated Quote</label>
    <type>Checkbox</type>
</CustomField>