force-app/main/default/objects/Opportunity/fields/PEO_Rev__c.field-meta.xml
<CustomField>
    <fullName>PEO_Rev__c</fullName>
    <description>Used for Reporting - If HR Solutions PEO-s is checked on, then use net revenue</description>
    <formula>IF(  HR_Solutions_PEO_S__c = TRUE, Amount , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PEO Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>