force-app/main/default/objects/Opportunity/fields/Potential_for_Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>Potential_for_Multiple_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case 21556666</description>
    <label>Potential for Multiple Locations</label>
    <type>Checkbox</type>
</CustomField>