force-app/main/default/objects/Opportunity/fields/Previous_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Owner ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>