force-app/main/default/objects/Opportunity/fields/Primary_Competition__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competition__c</fullName>
    <description>Identifies who is the primary competitor for this opportunity</description>
    <label>Primary Competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>5-STAR</fullName>
            </value>
            <value>
                <fullName>Abel HR</fullName>
            </value>
            <value>
                <fullName>AccessPoint</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>ACE - APPA</fullName>
            </value>
            <value>
                <fullName>Adam&apos;s Keegan</fullName>
            </value>
            <value>
                <fullName>Administaff</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>ADP Pay eXpert</fullName>
            </value>
            <value>
                <fullName>ADP Payforce</fullName>
            </value>
            <value>
                <fullName>ADP PC/Payroll for Windows</fullName>
            </value>
            <value>
                <fullName>ADP Run</fullName>
            </value>
            <value>
                <fullName>ADP Total Source</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Advantage HR</fullName>
            </value>
            <value>
                <fullName>Advantage Payroll</fullName>
            </value>
            <value>
                <fullName>AEG (American Employer Group)</fullName>
            </value>
            <value>
                <fullName>Agile HR</fullName>
            </value>
            <value>
                <fullName>AIA Insurance</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>AIG AMTRUST</fullName>
            </value>
            <value>
                <fullName>AI Group</fullName>
            </value>
            <value>
                <fullName>Alliance Benefit Group</fullName>
            </value>
            <value>
                <fullName>Alliance Pension Consultants LLC</fullName>
            </value>
            <value>
                <fullName>Allstaff</fullName>
            </value>
            <value>
                <fullName>Alpha Staff</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>AMCHECK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>