force-app/main/default/objects/Opportunity/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>