force-app/main/default/objects/Opportunity/fields/Primary_Oracle_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Oracle_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Oracle Quote</label>
    <referenceTo>cafsl__Oracle_Quote__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>