force-app/main/default/objects/Opportunity/fields/Primary_Oracle_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Primary_Oracle_Quote_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Oracle Quote Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>