force-app/main/default/objects/Opportunity/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <description>Notes of what occurred during processing of this record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes of what occurred during processing of this record.</inlineHelpText>
    <label>Process Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>