force-app/main/default/objects/Opportunity/fields/Prod_GLRS_Charge__c.field-meta.xml
<CustomField>
    <fullName>Prod_GLRS_Charge__c</fullName>
    <formula>IF( Prod_GLRS__c , 15.00 *12, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod-GLRS Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>