force-app/main/default/objects/Opportunity/fields/Prod_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Prod_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payroll only product</description>
    <inlineHelpText>Payroll only a la carte</inlineHelpText>
    <label>Prod-Payroll*-</label>
    <type>Checkbox</type>
</CustomField>