force-app/main/default/objects/Opportunity/fields/Prod_Payroll_Taxpay__c.field-meta.xml
<CustomField>
    <fullName>Prod_Payroll_Taxpay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use for Payroll with Taxpay Bundle</description>
    <inlineHelpText>Use for Payroll with Taxpay Bundle</inlineHelpText>
    <label>Prod-Payroll Taxpay*-</label>
    <type>Checkbox</type>
</CustomField>