force-app/main/default/objects/Opportunity/fields/Prod_SUI_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Prod_SUI_Service_Charge__c</fullName>
    <formula>IF( Prod_SUI_Service__c, IF(Employees_Paid_Per_Payroll__c&lt;26,396.00,396.00+((Employees_Paid_Per_Payroll__c-25)*0.50)), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod-SUI Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>