force-app/main/default/objects/Opportunity/fields/Prod_Time_Off_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Prod_Time_Off_Accruals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prod-Time Off Accruals*-</label>
    <type>Checkbox</type>
</CustomField>