force-app/main/default/objects/Opportunity/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <description>populated by OpptyLineItem class with product family</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Summary*-</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>