force-app/main/default/objects/Opportunity/fields/ProductGroupByOpptyType__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupByOpptyType__c</fullName>
    <description>This is used for duplicate checking.</description>
    <formula>CASE(TEXT( OpportunityType__c ), &apos;Payroll&apos;, &apos;Payroll&apos;
        ,&apos;New Plan&apos;, &apos;Retirement&apos;
        ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the Opportunity Type of this Opportunity, what Product Group does it equate to? This is used for duplicate checking.</inlineHelpText>
    <label>Product Group By Oppty Type</label>
    <type>Text</type>
</CustomField>