force-app/main/default/objects/Opportunity/fields/ProductGroupsSelected__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupsSelected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Which product groups are included with the products selected for this opportunity (comma separated)?</inlineHelpText>
    <label>Product Groups Selected</label>
    <length>200</length>
    <type>Text</type>
</CustomField>