force-app/main/default/objects/Opportunity/fields/ProductReferred__c.field-meta.xml
<CustomField>
    <fullName>ProductReferred__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The product referred for this record</inlineHelpText>
    <label>Product Referred</label>
    <length>240</length>
    <type>Text</type>
</CustomField>