force-app/main/default/objects/Opportunity/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>field on Bank Web lead forms entered in Lead and mapped to Opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Promo Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>