force-app/main/default/objects/Opportunity/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <description>To note the price in which Paychex is purchasing the acquisition for. 
Manually populated 
FT 29254483</description>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>