force-app/main/default/objects/Opportunity/fields/Reason_Not_Sold__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Sold__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1st Meeting Canceled</fullName>
            </value>
            <value>
                <fullName>Ability to block bonus from 401k contribution</fullName>
            </value>
            <value>
                <fullName>Account Sweeping (FSA)</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>AFLAC only opportunity</fullName>
            </value>
            <value>
                <fullName>Already engaged with prospect</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Auto-Close</fullName>
            </value>
            <value>
                <fullName>B.O.R. Transfer</fullName>
            </value>
            <value>
                <fullName>Back End Surrender Charge</fullName>
            </value>
            <value>
                <fullName>Bankchex</fullName>
            </value>
            <value>
                <fullName>Benefits Online</fullName>
            </value>
            <value>
                <fullName>Benetrac</fullName>
            </value>
            <value>
                <fullName>Better SDBA</fullName>
            </value>
            <value>
                <fullName>Broker loyalty/family member</fullName>
            </value>
            <value>
                <fullName>Can&apos;t find needed information to make decision</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Cannot reach client</fullName>
            </value>
            <value>
                <fullName>Carrier Declination</fullName>
            </value>
            <value>
                <fullName>Carrier Not Available</fullName>
            </value>
            <value>
                <fullName>Carrier Options</fullName>
            </value>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
            <value>
                <fullName>Changed Mind</fullName>
            </value>
            <value>
                <fullName>Chose Another Provider</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>Client does not need solution</fullName>
            </value>
            <value>
                <fullName>Cobra Pricing</fullName>
            </value>
            <value>
                <fullName>Common Paymaster</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Contract in Place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>