force-app/main/default/objects/Opportunity/fields/Reason_Not_Sold_Details__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Sold_Details__c</fullName>
    <label>Reason Lost Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Not_Sold__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>$0-$50 / Month</fullName>
            </value>
            <value>
                <fullName>$101-$200 / Month</fullName>
            </value>
            <value>
                <fullName>$201-$300 / Month</fullName>
            </value>
            <value>
                <fullName>$51-$75 / Month</fullName>
            </value>
            <value>
                <fullName>$76-$100 / Month</fullName>
            </value>
            <value>
                <fullName>&gt; $301 / Month</fullName>
            </value>
            <value>
                <fullName>401K</fullName>
            </value>
            <value>
                <fullName>Acquired/Out of Business</fullName>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Already engaged with Client</fullName>
            </value>
            <value>
                <fullName>Already engaged with prospect</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>BambooHR</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Bank Referral: Can&apos;t work the lead</fullName>
            </value>
            <value>
                <fullName>Basis Points</fullName>
            </value>
            <value>
                <fullName>Benefits Administration</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Business Closed</fullName>
            </value>
            <value>
                <fullName>Business Not Opening</fullName>
            </value>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Chose Another Provider</fullName>
            </value>
            <value>
                <fullName>Client did not specify</fullName>
            </value>
            <value>
                <fullName>Common Paymaster</fullName>
            </value>
            <value>
                <fullName>Competitor Promotion</fullName>
            </value>
            <value>
                <fullName>Confusion over pricing</fullName>
            </value>
            <value>
                <fullName>Confusion over Pricing Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>