force-app/main/default/objects/Opportunity/fields/Reason_Won__c.field-meta.xml
<CustomField>
    <fullName>Reason_Won__c</fullName>
    <description>To allow sales reps to indicate the primary reason why they believe they won the sale.</description>
    <inlineHelpText>For Sold Opportunities, select the primary reason why we won the sale</inlineHelpText>
    <label>Reason Won</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Benefit Strategy</fullName>
            </value>
            <value>
                <fullName>Co-Employment</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Employee Issues</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>HRG Support - Onsite</fullName>
            </value>
            <value>
                <fullName>HRG Support - Virtual</fullName>
            </value>
            <value>
                <fullName>Integrated Technology</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Next Gen</fullName>
            </value>
            <value>
                <fullName>No Reason Given</fullName>
            </value>
            <value>
                <fullName>Opportunity for future</fullName>
            </value>
            <value>
                <fullName>OSHA Safety</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Recruitment &amp; Retention Strategy</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Sales Process</fullName>
            </value>
            <value>
                <fullName>Service &amp; Support</fullName>
            </value>
            <value>
                <fullName>Service Model</fullName>
            </value>
            <value>
                <fullName>Source of Business</fullName>
            </value>
            <value>
                <fullName>Tax Benefit</fullName>
            </value>
            <value>
                <fullName>Training Support</fullName>
            </value>
            <value>
                <fullName>Value Proposition</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>