force-app/main/default/objects/Opportunity/fields/Reason_Won_Details__c.field-meta.xml
<CustomField>
    <fullName>Reason_Won_Details__c</fullName>
    <label>Reason Won Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Won__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ability to purchase entirely digitally</fullName>
            </value>
            <value>
                <fullName>Customer service guarantees</fullName>
            </value>
            <value>
                <fullName>Effective product demo</fullName>
            </value>
            <value>
                <fullName>Expertise in companies my size</fullName>
            </value>
            <value>
                <fullName>Integrations with other solutions</fullName>
            </value>
            <value>
                <fullName>Intuitive UX/UI</fullName>
            </value>
            <value>
                <fullName>Knowledgeable account reps</fullName>
            </value>
            <value>
                <fullName>Lowest price (even if less functionality)</fullName>
            </value>
            <value>
                <fullName>Market reputation</fullName>
            </value>
            <value>
                <fullName>Onboarding/training support</fullName>
            </value>
            <value>
                <fullName>Personal recommendation (advisor / colleague)</fullName>
            </value>
            <value>
                <fullName>Personal recommendation (friend)</fullName>
            </value>
            <value>
                <fullName>Pricing transparency</fullName>
            </value>
            <value>
                <fullName>Product functionality</fullName>
            </value>
            <value>
                <fullName>Recommendation from Strategic Account Partner</fullName>
            </value>
            <value>
                <fullName>Sales rep interaction</fullName>
            </value>
            <value>
                <fullName>Value (functionality for the money)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>