force-app/main/default/objects/Opportunity/fields/Received_Statement__c.field-meta.xml
<CustomField>
    <fullName>Received_Statement__c</fullName>
    <description>Did you have a statement when you quoted the deal?</description>
    <label>Received Statement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>