force-app/main/default/objects/Opportunity/fields/Recommended_Discount__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Discount__c</fullName>
    <description>APR0160101 new field for predictive discounting</description>
    <label>Recommended Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>