force-app/main/default/objects/Opportunity/fields/Referral_Account__c.field-meta.xml
<CustomField>
    <fullName>Referral_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Referral Account of the Referral Contact at the time of the Opportunity. This is so we know at a company level the referrals made, even if the contact changes companies.</description>
    <inlineHelpText>The Referral Account of the Referral Contact at the time of the Opportunity.</inlineHelpText>
    <label>Referral Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referral_Account__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Search results exclude records with an end date.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>