force-app/main/default/objects/Opportunity/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field should only be completed if the Lead Source is an external partner (CPA, Bank, FA, etc.)</inlineHelpText>
    <label>Referral Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referral_Contact__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Referral Contacts with End Dates will only appear if you click the Show All Results link below.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>OppRCs</relationshipName>
    <type>Lookup</type>
</CustomField>