force-app/main/default/objects/Opportunity/fields/Referral_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Referral_Deduction__c</fullName>
    <description>Amount of deduction for referrals from others</description>
    <label>Referral Deduction</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>