force-app/main/default/objects/Opportunity/fields/Referral_MMS__c.field-meta.xml
<CustomField>
    <fullName>Referral_MMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use when business is referred to MMS</description>
    <label>Referral MMS</label>
    <type>Checkbox</type>
</CustomField>