force-app/main/default/objects/Opportunity/fields/Referral_Payworks__c.field-meta.xml
<CustomField>
    <fullName>Referral_Payworks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Payworks</label>
    <type>Checkbox</type>
</CustomField>