force-app/main/default/objects/Opportunity/fields/ReferralAccount__c.field-meta.xml
<CustomField>
    <fullName>ReferralAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The account relationship for the referral</inlineHelpText>
    <label>Referral Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Referral Account)</relationshipLabel>
    <relationshipName>OpportunitiesRefAcct</relationshipName>
    <type>Lookup</type>
</CustomField>